--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ansuarez9.github.io/todo-list-react/",
+  "homepage": "https://ansuarez9.github.io/todo-list-react",
   "name": "todo-list",
   "version": "0.1.0",
   "private": true,
